--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="box"></div>
+    <div class="box">
+        <div class="box-up"></div>
+    </div>
 </body>
 </html>
